<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:padding="2dp"
	>
	<LinearLayout
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical"
		>

		<ImageView
			android:id="@+id/imageView2"
			android:layout_width="400dp"
			android:layout_height="192dp"
			android:layout_gravity="center_horizontal"
			android:layout_margin="10dp"
			android:scaleType="centerInside"
			android:src="@drawable/title_1"
			app:srcCompat="@drawable/title_1"
			tools:srcCompat="@drawable/title_1" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:text="@string/rules_title" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/rules_text_1" />

		<ImageView
			android:layout_width="365dp"
			android:layout_height="260dp"
			android:layout_gravity="center_horizontal"
			android:layout_margin="10dp"
			android:scaleType="centerInside"
			android:src="@drawable/coener_expl"
			app:srcCompat="@drawable/coener_expl"
			tools:srcCompat="@drawable/coener_expl" />

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/rules_text_2" />

		<ImageView
			android:id="@+id/video"
			android:layout_width="319dp"
			android:layout_height="171dp"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="16dp"
			android:background="@drawable/video_screen"
			android:src="@drawable/video_screen" />



	</LinearLayout>
</ScrollView>
	