<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="394dp"
        app:srcCompat="@drawable/blokish2" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginStart="176dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="10dp"
        android:background="#2A6EDC"
        android:text="@string/new_game"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_set"
        android:layout_width="165dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginStart="176dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="10dp"
        android:background="#FFEB3B"
        android:text="@string/preferences"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button_help"
        android:layout_width="163dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginStart="176dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="37dp"
        android:background="#F44336"
        android:text="@string/help"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold" />

</LinearLayout>